--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -81,8 +81,8 @@
 % Update fields below!
 \title{Conceptual Requirement Validation for Architecture Design Systems}
 \author{Gregory Flanagan}
-\degreemonth{September} \degreeyear{2010} \degree{Master of Science}
-\defensemonth{September} \defenseyear{2010}
+\degreemonth{January} \degreeyear{2011} \degree{Master of Science}
+\defensemonth{January} \defenseyear{2011}
 \numberofmembers{3} \chair{Franz Kurfess, Ph.D.} \othermemberA{Mehul Bhatt, Ph.D.} \othermemberB{John Seng, Ph.D.} \field{Computer Science} \campus{San Luis Obispo}
 \copyrightyears{seven}
 
@@ -137,7 +137,14 @@
 
 \chapter{Introduction}
 \label{intro}
-Humans reason about space on a qualitative level, this means we think about our environment in (qualitative) terms such as, "the elm tree is next-to the house", instead of (quantitative) terms like, "the exterior part of the elm tree is 4.54 meters away from the exterior part of the house". The main distinction between the two is based on the level of spatial abstraction; qualitative represents a high level while quantitative represent a low level of abstraction. Our natural cognitive intuition to use qualitative instead of quantitative is the crux of how humans efficiently and effectively represent and reason about our spatial environments and is the topic of much research \cite{freksa1991qsr} \cite{Cohn:2001:QSR}.
+Humans reason about space at an abstract level, this means we think about our spatial environments in terms of qualities rather than quantities. In other words, we cognitively represent our spatial environments using symbolic terms such as \emph{next-to}, \emph{in-front-of}, or \emph{close-by}, as opposed to using a precise spatial coordinate system of x, y, and z  \cite{freksa1991qsr} \cite{Cohn:2001:QSR}. Computers on the other hand are excellent at storing and computing over large amounts of precise, concrete data. From a spatial perspective, this means that computers are able to handle large amount of quantitative spatial data that is necessary for certain tasks such as geo-location and terrain mapping \cite{somebody}. 
+
+The area architectural design is an interesting application domain with regards to the modeling of space because it inherently involves both aspects of space: \emph{qualitative}, \emph{quantitative}. Where as an architect conceptualize a design from an spatially abstract level, it is necessary for the architect to construct the design at a concrete level that is precise enough for the design to be realized \cite{conceptual design stuff}. 
+
+
+%Our cognitive intuition to reason about space abstractly is the crux of how humans efficiently and effectively handle our spatial environments.
+
+%Humans reason about space on a qualitative level, this means we think about our environment in (qualitative) terms such as, "the elm tree is next-to the house", instead of (quantitative) terms like, "the exterior part of the elm tree is 4.54 meters away from the exterior part of the house". The main distinction between the two is based on the level of spatial abstraction; qualitative represents a high level while quantitative represent a low level of abstraction. Our natural cognitive intuition to use qualitative instead of quantitative is the crux of how humans efficiently and effectively represent and reason about our spatial environments and is the topic of much research .
 
 %The domain of architectural design is quite interesting in this respect because it relies on both aspects of space: qualitative and quantitative. In the architectural design literature \cite{} this distinction is commonly reffed to as \emph{form} and \emph{function}, in which the common phrase goes "\emph{form follows function}" \cite{formfunction}. In general, the context of this phrase supports the doctrine that the form (structure) should be determined by its function (purpose). For decades there has been a plethora of debate on the interpretation of these claims and its validity with a practical design context. For the purposes here the focus is not on the philosophy of design or any argument about the validity of such claims, but is an introduction to the idea that architectural design is inherently defined by and intertwined with the qualitative and quantitative aspects of space.
 
