--- a/flanaganthesis.tex
+++ b/flanaganthesis.tex
@@ -137,10 +137,22 @@
 
 \chapter{Introduction}
 \label{intro}
-Humans reason about space at an abstract level, this means we think about our spatial environments in terms of qualities rather than quantities. In other words, we cognitively represent our spatial environments using symbolic terms such as \emph{next-to}, \emph{in-front-of}, or \emph{close-by}, as opposed to using a precise spatial coordinate system of x, y, and z  \cite{freksa1991qsr} \cite{Cohn:2001:QSR}. Computers on the other hand are excellent at storing and computing over large amounts of precise, concrete data. From a spatial perspective, this means that computers are able to handle large amount of quantitative spatial data that is necessary for certain tasks such as geo-location and terrain mapping \cite{somebody}. 
+Humans reason about space at an abstract level, this means we think about our spatial environments in terms of qualities rather than quantities. In other words, we cognitively represent our spatial environments using symbolic terms such as \emph{next-to}, \emph{in-front-of}, or \emph{close-by}, as opposed to using a precise spatial coordinate system of x, y, and z  \cite{freksa1991qsr} \cite{Cohn:2001:QSR}. Computers on the other hand are excellent at storing and computing over large amounts of precise, concrete data. From a spatial perspective, this means that computers are able to handle large amount of quantitative spatial information that is necessary for tasks such as geo-location and terrain mapping \cite{somebody}. 
 
-The area architectural design is an interesting application domain with regards to the modeling of space because it inherently involves both aspects of space: \emph{qualitative}, \emph{quantitative}. Where as an architect conceptualize a design from an spatially abstract level, it is necessary for the architect to construct the design at a concrete level that is precise enough for the design to be realized \cite{conceptual design stuff}. 
+The area of architectural design is an interesting application domain with regards to the representation of space because it inherently involves multiple spatial perspectives: \emph{qualitative} and \emph{quantitative}. At the qualitative level, spatial aspects of the design define architectural qualities such as spaciousness, privacy, and continuity. These conceptual aspects encompass the way an architectural design is experienced. At the quantitative level, an architectural design is spatially modeled at a precise and concrete level that is necessary during the construction of the design in the real world.
 
+Current state-of-the-art Computer Aided Architectural Design (CAAD) tools spatially represent architectural designs at a quantitative level \cite{archiCAD} \cite{autoCAD}. While a quantitative representations allows CAAD tools to produce accurate blueprints that can be used during construction, it lack the underlying computational apparatus necessary to reason about architectural design at a high level of abstraction. 
+
+This thesis is an a first step towards building a framework that bridges the gap between the high level conceptual aspects of a design to the design's low level spatial representation. Specifically, the framework referred to as the Conceptual Requirements Reasoner (CRR), does so in the context of conceptual requirements reasoning. This framework will demonstrate how qualitative spatial representation and reasoning techniques can be used to bridge the gap between conceptual and quantitative levels.
+
+A Museum Case Study is presented to demonstrate the application of the CRR in a real world design context. It introduces a set of museum design requirements that were identified in museum research and applies these requirements to two real world museums. The results of the case study show that the CRR is an effective tool for detecting violations of design requirements.
+
+Outline of thesis
+
+
+
+
+%Where as an architect conceptualizes a design from an spatially abstract level, it is necessary for the architect to construct the concrete level that is precise enough for the design to be realized \cite{conceptual design stuff}. 
 
 %Our cognitive intuition to reason about space abstractly is the crux of how humans efficiently and effectively handle our spatial environments.
 
